--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-django
-djangorestframework
-django-import-export
-odswriter
-django-filter
+diff-match-patch==20121119
+Django==1.9.4
+django-filter==0.12.0
+django-import-export==0.4.3
+djangorestframework==3.3.2
+odswriter==0.4.0
+tablib==0.11.2
