--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "kiffel-verwaltung",
   "authors": [
-    "Johannes Lauinger <johannes@lauinger-it.de>"
+    "Johannes Lauinger <johannes@lauinger-it.de>",
+    "Max Weller <max@weller-it.com>"
   ],
   "description": "",
   "main": "",
@@ -23,6 +24,10 @@
     "angular-material": "^1.0.6",
     "angular-material-icons": "^0.6.0",
     "underscore": "^1.8.3",
-    "angular-underscore": "^0.5.0"
+    "angular-underscore": "^0.5.0",
+    "angular-ui-calendar": "^1.0.1"
+  },
+  "resolutions": {
+    "angular": "^1.5.0"
   }
 }
