--- a/bower.json
+++ b/bower.json
@@ -18,16 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.0",
-    "angular-route": "^1.5.0",
-    "restangular": "^1.5.2",
-    "angular-material": "^1.0.6",
-    "angular-material-icons": "^0.6.0",
     "underscore": "^1.8.3",
-    "angular-underscore": "^0.5.0",
-    "angular-ui-calendar": "^1.0.1"
-  },
-  "resolutions": {
-    "angular": "^1.5.0"
+    "font-awesome": "fontawesome#^4.6.1"
   }
 }
