--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-diff-match-patch>=20121119
-Django>=1.11,<2.0
-django-filter>=0.12.0
-django-import-export>=0.4.3
-djangorestframework>=3.3.2
-tablib>=0.11.2
-#mysqlclient==1.3.7
-beautifulsoup4
-pytz
-django-ajax-selects
-requests
+diff-match-patch==20121119
+Django>=1.11.16,<2.0
+django-filter==2.0.0
+django-import-export==1.1.0
+djangorestframework==3.8.2
+tablib==0.12.1
+beautifulsoup4==4.6.3
+pytz==2018.5
+django-ajax-selects==1.7.1
+requests==2.19.1
