--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 diff-match-patch==20121119
-Django>=1.11.16,<2.0
+Django==1.11.16 # pyup: <2.0
 django-filter==2.0.0
 django-import-export==1.1.0
 djangorestframework==3.9.0
