--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "underscore": "^1.8.3",
+    "underscore": "*",
     "font-awesome": "fontawesome#^4.6.1"
   }
 }
